# RiboTE_Tauri

./: .gitignore  .taurignore  AGENTS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/r-scripts/: analysis_modules.R  codon_desktop.R  data_preprocess.R
src-tauri/resources/r-scripts/codon/: codon.analysis.base.R  codon.analysis.input_bias.R  codon.analysis.shift.R  codon.payload.R  codon.resources.R  module_shell.R
src-tauri/src/: lib.rs  main.rs
src/components/: PagedCsvTable.tsx
src/components/shared/: ConsoleDock.tsx  LoadingScreen.tsx
src/data/: moduleCatalog.tsx  species.ts
src/hooks/: useTransientRuntimeError.ts
src/layout/: MainLayout.tsx
src/modules/Analysis/: AnalysisResultWorkspace.tsx  ConfiguredAnalysisModule.tsx  analysisCharts.ts  analysisModuleConfigs.ts  analysisResultExports.ts  richAnalysisCharts.ts  useAnalysisChart.ts
src/modules/Codon/: CodonExportPanel.tsx  CodonModule.tsx  CodonModuleConfig.tsx  CodonResultsViewUtils.tsx  CodonResultsViews.tsx  CodonResultsWorkspace.tsx  codonChart.enrichment.js  codonChart.group.js  codonChart.heatmap.js  codonChart.load.js  codonChart.scatter.js  codonChart.shared.js  (+1 more)
src/store/: useAppStore.ts  useLogStore.ts
src/styles/: analysis-modules.css  analysis-results.css  app-shell.css  codon-module.css  data-preprocess.css  export-modal.css  module-shell.css  radius-overrides.css  runtime-ui.css  setup.css  tokens.css  translation-efficiency.css
src/utils/: chartTooltip.ts
(+14 files in other folders)
