[package]
name = "ribote_windows"
version = "0.1.0"
description = "RiboTE desktop shell"
authors = ["Codex", "User"]
edition = "2021"

[lib]
name = "ribote_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
